deploy: 161adf4dc2cb187bb31d900cb9c39b59ca223cd6

--- a/index-all.html
+++ b/index-all.html
@@ -2155,7 +2155,7 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/GlobalContext.GlobalContextBuilder.html#savedGroups(com.google.gson.JsonObject)" class="member-name-link">savedGroups(JsonObject)</a> - Method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/GlobalContext.GlobalContextBuilder.html" title="class in growthbook.sdk.java.multiusermode.configurations">GlobalContext.GlobalContextBuilder</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="growthbook/sdk/java/Version.html#SDK_VERSION" class="member-name-link">SDK_VERSION</a> - Static variable in interface growthbook.sdk.java.<a href="growthbook/sdk/java/Version.html" title="interface in growthbook.sdk.java">Version</a></dt>
+<dt><a href="growthbook/sdk/java/Version.html#SDK_VERSION" class="member-name-link">SDK_VERSION</a> - Static variable in class growthbook.sdk.java.<a href="growthbook/sdk/java/Version.html" title="class in growthbook.sdk.java">Version</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/Experiment.ExperimentBuilder.html#seed(java.lang.String)" class="member-name-link">seed(String)</a> - Method in class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/Experiment.ExperimentBuilder.html" title="class in growthbook.sdk.java.model">Experiment.ExperimentBuilder</a></dt>
 <dd>
@@ -3083,10 +3083,12 @@ the order they are declared.</div>
 <dd>
 <div class="block">Run an experiment (A/B test) and randomly choose between these variations</div>
 </dd>
-<dt><a href="growthbook/sdk/java/Version.html" class="type-name-link" title="interface in growthbook.sdk.java">Version</a> - Interface in <a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></dt>
+<dt><a href="growthbook/sdk/java/Version.html" class="type-name-link" title="class in growthbook.sdk.java">Version</a> - Class in <a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></dt>
 <dd>
-<div class="block">Tag for the published GrowthBook SDK version</div>
+<div class="block">This class contains SDK version information.</div>
 </dd>
+<dt><a href="growthbook/sdk/java/Version.html#%3Cinit%3E()" class="member-name-link">Version()</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/Version.html" title="class in growthbook.sdk.java">Version</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/model/Operator.html#VERSION_EQ" class="member-name-link">VERSION_EQ</a> - Enum constant in enum class growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/Operator.html" title="enum class in growthbook.sdk.java.model">Operator</a></dt>
 <dd>
 <div class="block">$veq</div>
