--- a/overview-tree.html
+++ b/overview-tree.html
@@ -146,6 +146,7 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.UserContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext.UserContextBuilder</a></li>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/VariationMeta.html" class="type-name-link" title="class in growthbook.sdk.java.model">VariationMeta</a></li>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/VariationMeta.VariationMetaBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.model">VariationMeta.VariationMetaBuilder</a></li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Version.html" class="type-name-link" title="class in growthbook.sdk.java">Version</a></li>
 </ul>
 </li>
 </ul>
@@ -161,7 +162,6 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.stickyBucketing.<a href="growthbook/sdk/java/stickyBucketing/StickyBucketService.html" class="type-name-link" title="interface in growthbook.sdk.java.stickyBucketing">StickyBucketService</a></li>
 <li class="circle">growthbook.sdk.java.callback.<a href="growthbook/sdk/java/callback/TrackingCallback.html" class="type-name-link" title="interface in growthbook.sdk.java.callback">TrackingCallback</a></li>
 <li class="circle">growthbook.sdk.java.multiusermode.usage.<a href="growthbook/sdk/java/multiusermode/usage/TrackingCallbackWithUser.html" class="type-name-link" title="interface in growthbook.sdk.java.multiusermode.usage">TrackingCallbackWithUser</a></li>
-<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Version.html" class="type-name-link" title="interface in growthbook.sdk.java">Version</a></li>
 </ul>
 </section>
 <section class="hierarchy">
