--- a/growthbook/sdk/java/package-tree.html
+++ b/growthbook/sdk/java/package-tree.html
@@ -60,14 +60,9 @@ loadScripts(document, 'script');</script>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
 <li class="circle">growthbook.sdk.java.<a href="GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a></li>
+<li class="circle">growthbook.sdk.java.<a href="Version.html" class="type-name-link" title="class in growthbook.sdk.java">Version</a></li>
 </ul>
 </li>
-</ul>
-</section>
-<section class="hierarchy">
-<h2 title="Interface Hierarchy">Interface Hierarchy</h2>
-<ul>
-<li class="circle">growthbook.sdk.java.<a href="Version.html" class="type-name-link" title="interface in growthbook.sdk.java">Version</a></li>
 </ul>
 </section>
 </main>
