deploy: 1b69f254326830c293cebc9298e949c099045ea6

--- a/growthbook/sdk/java/model/FeatureRule.html
+++ b/growthbook/sdk/java/model/FeatureRule.html
@@ -72,7 +72,7 @@ loadScripts(document, 'script');</script>
 <h1 title="Class FeatureRule" class="title">Class FeatureRule&lt;ValueType&gt;</h1>
 </div>
 <div class="inheritance" title="Inheritance Tree"><a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">java.lang.Object</a>
-<div class="inheritance"><a href="../../../../serializers/SuperTypeToken.html" title="class in serializers">serializers.SuperTypeToken</a>&lt;ValueType&gt;
+<div class="inheritance"><a href="../serializers/SuperTypeToken.html" title="class in growthbook.sdk.java.serializers">growthbook.sdk.java.serializers.SuperTypeToken</a>&lt;ValueType&gt;
 <div class="inheritance">growthbook.sdk.java.model.FeatureRule&lt;ValueType&gt;</div>
 </div>
 </div>
@@ -87,7 +87,7 @@ loadScripts(document, 'script');</script>
 </dl>
 <hr>
 <div class="type-signature"><span class="modifiers">public class </span><span class="element-name type-name-label">FeatureRule&lt;ValueType&gt;</span>
-<span class="extends-implements">extends <a href="../../../../serializers/SuperTypeToken.html" title="class in serializers">SuperTypeToken</a>&lt;ValueType&gt;
+<span class="extends-implements">extends <a href="../serializers/SuperTypeToken.html" title="class in growthbook.sdk.java.serializers">SuperTypeToken</a>&lt;ValueType&gt;
 implements com.google.gson.JsonDeserializer&lt;<a href="FeatureRule.html" title="class in growthbook.sdk.java.model">FeatureRule</a>&lt;ValueType&gt;&gt;</span></div>
 <div class="block">Overrides the defaultValue of a Feature based on a set of requirements. Has a number of optional properties
 
@@ -420,8 +420,8 @@ implements com.google.gson.JsonDeserializer&lt;<a href="FeatureRule.html" title=
 </div>
 </div>
 <div class="inherited-list">
-<h3 id="methods-inherited-from-class-serializers.SuperTypeToken">Methods inherited from class&nbsp;serializers.<a href="../../../../serializers/SuperTypeToken.html" title="class in serializers">SuperTypeToken</a></h3>
-<code><a href="../../../../serializers/SuperTypeToken.html#getType()">getType</a></code></div>
+<h3 id="methods-inherited-from-class-growthbook.sdk.java.serializers.SuperTypeToken">Methods inherited from class&nbsp;growthbook.sdk.java.serializers.<a href="../serializers/SuperTypeToken.html" title="class in growthbook.sdk.java.serializers">SuperTypeToken</a></h3>
+<code><a href="../serializers/SuperTypeToken.html#getType()">getType</a></code></div>
 <div class="inherited-list">
 <h3 id="methods-inherited-from-class-java.lang.Object">Methods inherited from class&nbsp;java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">Object</a></h3>
 <code><a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html#getClass()" title="class or interface in java.lang" class="external-link">getClass</a>, <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html#notify()" title="class or interface in java.lang" class="external-link">notify</a>, <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html#notifyAll()" title="class or interface in java.lang" class="external-link">notifyAll</a>, <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html#wait()" title="class or interface in java.lang" class="external-link">wait</a>, <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html#wait(long)" title="class or interface in java.lang" class="external-link">wait</a>, <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html#wait(long,int)" title="class or interface in java.lang" class="external-link">wait</a></code></div>
