--- a/growthbook/sdk/java/model/package-tree.html
+++ b/growthbook/sdk/java/model/package-tree.html
@@ -83,7 +83,7 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.model.<a href="RequestBodyForRemoteEval.html" class="type-name-link" title="class in growthbook.sdk.java.model">RequestBodyForRemoteEval</a></li>
 <li class="circle">growthbook.sdk.java.model.<a href="StickyAssignmentsDocument.html" class="type-name-link" title="class in growthbook.sdk.java.model">StickyAssignmentsDocument</a></li>
 <li class="circle">growthbook.sdk.java.model.<a href="StickyBucketVariation.html" class="type-name-link" title="class in growthbook.sdk.java.model">StickyBucketVariation</a></li>
-<li class="circle">serializers.<a href="../../../../serializers/SuperTypeToken.html" class="type-name-link" title="class in serializers">SuperTypeToken</a>&lt;T&gt;
+<li class="circle">growthbook.sdk.java.serializers.<a href="../serializers/SuperTypeToken.html" class="type-name-link" title="class in growthbook.sdk.java.serializers">SuperTypeToken</a>&lt;T&gt;
 <ul>
 <li class="circle">growthbook.sdk.java.model.<a href="FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java.model">FeatureRule</a>&lt;ValueType&gt; (implements com.google.gson.JsonDeserializer&lt;T&gt;)</li>
 </ul>
