--- a/growthbook/sdk/java/sandbox/package-tree.html
+++ b/growthbook/sdk/java/sandbox/package-tree.html
@@ -59,9 +59,15 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
-<li class="circle">growthbook.sdk.java.sandbox.<a href="CachingManager.html" class="type-name-link" title="class in growthbook.sdk.java.sandbox">CachingManager</a></li>
+<li class="circle">growthbook.sdk.java.sandbox.<a href="FileCachingManagerImpl.html" class="type-name-link" title="class in growthbook.sdk.java.sandbox">FileCachingManagerImpl</a> (implements growthbook.sdk.java.sandbox.<a href="GbCacheManager.html" title="interface in growthbook.sdk.java.sandbox">GbCacheManager</a>)</li>
 </ul>
 </li>
+</ul>
+</section>
+<section class="hierarchy">
+<h2 title="Interface Hierarchy">Interface Hierarchy</h2>
+<ul>
+<li class="circle">growthbook.sdk.java.sandbox.<a href="GbCacheManager.html" class="type-name-link" title="interface in growthbook.sdk.java.sandbox">GbCacheManager</a></li>
 </ul>
 </section>
 </main>
