--- a/overview-tree.html
+++ b/overview-tree.html
@@ -62,9 +62,9 @@ loadScripts(document, 'script');</script>
 <li><a href="growthbook/sdk/java/multiusermode/util/package-tree.html">growthbook.sdk.java.multiusermode.util</a>, </li>
 <li><a href="growthbook/sdk/java/repository/package-tree.html">growthbook.sdk.java.repository</a>, </li>
 <li><a href="growthbook/sdk/java/sandbox/package-tree.html">growthbook.sdk.java.sandbox</a>, </li>
+<li><a href="growthbook/sdk/java/serializers/package-tree.html">growthbook.sdk.java.serializers</a>, </li>
 <li><a href="growthbook/sdk/java/stickyBucketing/package-tree.html">growthbook.sdk.java.stickyBucketing</a>, </li>
-<li><a href="growthbook/sdk/java/util/package-tree.html">growthbook.sdk.java.util</a>, </li>
-<li><a href="serializers/package-tree.html">serializers</a></li>
+<li><a href="growthbook/sdk/java/util/package-tree.html">growthbook.sdk.java.util</a></li>
 </ul>
 </div>
 <section class="hierarchy">
@@ -75,7 +75,6 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/AssignedExperiment.html" class="type-name-link" title="class in growthbook.sdk.java.model">AssignedExperiment</a></li>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/BucketRange.html" class="type-name-link" title="class in growthbook.sdk.java.model">BucketRange</a></li>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/BucketRange.BucketRangeBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.model">BucketRange.BucketRangeBuilder</a></li>
-<li class="circle">growthbook.sdk.java.sandbox.<a href="growthbook/sdk/java/sandbox/CachingManager.html" class="type-name-link" title="class in growthbook.sdk.java.sandbox">CachingManager</a></li>
 <li class="circle">growthbook.sdk.java.evaluators.<a href="growthbook/sdk/java/evaluators/ConditionEvaluator.html" class="type-name-link" title="class in growthbook.sdk.java.evaluators">ConditionEvaluator</a></li>
 <li class="circle">growthbook.sdk.java.util.<a href="growthbook/sdk/java/util/DecryptionUtils.html" class="type-name-link" title="class in growthbook.sdk.java.util">DecryptionUtils</a></li>
 <li class="circle">growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/EvaluationContext.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.configurations">EvaluationContext</a></li>
@@ -93,6 +92,7 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/FeatureResult.FeatureResultBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.model">FeatureResult.FeatureResultBuilder</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/FeatureRule.FeatureRuleBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.model">FeatureRule.FeatureRuleBuilder</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.multiusermode.usage.<a href="growthbook/sdk/java/multiusermode/usage/FeatureUsageCallbackAdapter.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode.usage">FeatureUsageCallbackAdapter</a> (implements growthbook.sdk.java.multiusermode.usage.<a href="growthbook/sdk/java/multiusermode/usage/FeatureUsageCallbackWithUser.html" title="interface in growthbook.sdk.java.multiusermode.usage">FeatureUsageCallbackWithUser</a>)</li>
+<li class="circle">growthbook.sdk.java.sandbox.<a href="growthbook/sdk/java/sandbox/FileCachingManagerImpl.html" class="type-name-link" title="class in growthbook.sdk.java.sandbox">FileCachingManagerImpl</a> (implements growthbook.sdk.java.sandbox.<a href="growthbook/sdk/java/sandbox/GbCacheManager.html" title="interface in growthbook.sdk.java.sandbox">GbCacheManager</a>)</li>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/Filter.html" class="type-name-link" title="class in growthbook.sdk.java.model">Filter</a></li>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/Filter.FilterBuilder.html" class="type-name-link" title="class in growthbook.sdk.java.model">Filter.FilterBuilder</a></li>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/GBContext.html" class="type-name-link" title="class in growthbook.sdk.java.model">GBContext</a></li>
@@ -123,7 +123,7 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/StickyAssignmentsDocument.html" class="type-name-link" title="class in growthbook.sdk.java.model">StickyAssignmentsDocument</a></li>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/StickyBucketVariation.html" class="type-name-link" title="class in growthbook.sdk.java.model">StickyBucketVariation</a></li>
 <li class="circle">growthbook.sdk.java.util.<a href="growthbook/sdk/java/util/StringUtils.html" class="type-name-link" title="class in growthbook.sdk.java.util">StringUtils</a></li>
-<li class="circle">serializers.<a href="serializers/SuperTypeToken.html" class="type-name-link" title="class in serializers">SuperTypeToken</a>&lt;T&gt;
+<li class="circle">growthbook.sdk.java.serializers.<a href="growthbook/sdk/java/serializers/SuperTypeToken.html" class="type-name-link" title="class in growthbook.sdk.java.serializers">SuperTypeToken</a>&lt;T&gt;
 <ul>
 <li class="circle">growthbook.sdk.java.model.<a href="growthbook/sdk/java/model/FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java.model">FeatureRule</a>&lt;ValueType&gt; (implements com.google.gson.JsonDeserializer&lt;T&gt;)</li>
 </ul>
@@ -158,6 +158,7 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.callback.<a href="growthbook/sdk/java/callback/FeatureRefreshCallback.html" class="type-name-link" title="interface in growthbook.sdk.java.callback">FeatureRefreshCallback</a></li>
 <li class="circle">growthbook.sdk.java.callback.<a href="growthbook/sdk/java/callback/FeatureUsageCallback.html" class="type-name-link" title="interface in growthbook.sdk.java.callback">FeatureUsageCallback</a></li>
 <li class="circle">growthbook.sdk.java.multiusermode.usage.<a href="growthbook/sdk/java/multiusermode/usage/FeatureUsageCallbackWithUser.html" class="type-name-link" title="interface in growthbook.sdk.java.multiusermode.usage">FeatureUsageCallbackWithUser</a></li>
+<li class="circle">growthbook.sdk.java.sandbox.<a href="growthbook/sdk/java/sandbox/GbCacheManager.html" class="type-name-link" title="interface in growthbook.sdk.java.sandbox">GbCacheManager</a></li>
 <li class="circle">growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/IGBFeaturesRepository.html" class="type-name-link" title="interface in growthbook.sdk.java.repository">IGBFeaturesRepository</a></li>
 <li class="circle">growthbook.sdk.java.stickyBucketing.<a href="growthbook/sdk/java/stickyBucketing/StickyBucketService.html" class="type-name-link" title="interface in growthbook.sdk.java.stickyBucketing">StickyBucketService</a></li>
 <li class="circle">growthbook.sdk.java.callback.<a href="growthbook/sdk/java/callback/TrackingCallback.html" class="type-name-link" title="interface in growthbook.sdk.java.callback">TrackingCallback</a></li>
