--- a/growthbook/sdk/java/repository/NativeJavaGbFeatureRepository.html
+++ b/growthbook/sdk/java/repository/NativeJavaGbFeatureRepository.html
@@ -133,13 +133,14 @@ implements <a href="IGBFeaturesRepository.html" title="interface in growthbook.s
 <div class="summary-table two-column-summary">
 <div class="table-header col-first">Constructor</div>
 <div class="table-header col-last">Description</div>
-<div class="col-constructor-name even-row-color"><code><a href="#%3Cinit%3E(java.lang.String,java.lang.String,java.lang.String,growthbook.sdk.java.repository.FeatureRefreshStrategy,java.lang.Integer,java.lang.Boolean,growthbook.sdk.java.model.RequestBodyForRemoteEval)" class="member-name-link">NativeJavaGbFeatureRepository</a><wbr>(<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/String.html" title="class or interface in java.lang" class="external-link">String</a>&nbsp;apiHost,
+<div class="col-constructor-name even-row-color"><code><a href="#%3Cinit%3E(java.lang.String,java.lang.String,java.lang.String,growthbook.sdk.java.repository.FeatureRefreshStrategy,java.lang.Integer,java.lang.Boolean,growthbook.sdk.java.model.RequestBodyForRemoteEval,growthbook.sdk.java.sandbox.GbCacheManager)" class="member-name-link">NativeJavaGbFeatureRepository</a><wbr>(<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/String.html" title="class or interface in java.lang" class="external-link">String</a>&nbsp;apiHost,
  <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/String.html" title="class or interface in java.lang" class="external-link">String</a>&nbsp;clientKey,
  <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/String.html" title="class or interface in java.lang" class="external-link">String</a>&nbsp;encryptionKey,
  <a href="FeatureRefreshStrategy.html" title="enum class in growthbook.sdk.java.repository">FeatureRefreshStrategy</a>&nbsp;refreshStrategy,
  <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Integer.html" title="class or interface in java.lang" class="external-link">Integer</a>&nbsp;swrTtlSeconds,
  <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Boolean.html" title="class or interface in java.lang" class="external-link">Boolean</a>&nbsp;isCacheDisabled,
- <a href="../model/RequestBodyForRemoteEval.html" title="class in growthbook.sdk.java.model">RequestBodyForRemoteEval</a>&nbsp;requestBodyForRemoteEval)</code></div>
+ <a href="../model/RequestBodyForRemoteEval.html" title="class in growthbook.sdk.java.model">RequestBodyForRemoteEval</a>&nbsp;requestBodyForRemoteEval,
+ <a href="../sandbox/GbCacheManager.html" title="interface in growthbook.sdk.java.sandbox">GbCacheManager</a>&nbsp;cacheManager)</code></div>
 <div class="col-last even-row-color">
 <div class="block">Create a new GBFeaturesRepository</div>
 </div>
@@ -297,7 +298,7 @@ implements <a href="IGBFeaturesRepository.html" title="interface in growthbook.s
 <h2>Constructor Details</h2>
 <ul class="member-list">
 <li>
-<section class="detail" id="&lt;init&gt;(java.lang.String,java.lang.String,java.lang.String,growthbook.sdk.java.repository.FeatureRefreshStrategy,java.lang.Integer,java.lang.Boolean,growthbook.sdk.java.model.RequestBodyForRemoteEval)">
+<section class="detail" id="&lt;init&gt;(java.lang.String,java.lang.String,java.lang.String,growthbook.sdk.java.repository.FeatureRefreshStrategy,java.lang.Integer,java.lang.Boolean,growthbook.sdk.java.model.RequestBodyForRemoteEval,growthbook.sdk.java.sandbox.GbCacheManager)">
 <h3>NativeJavaGbFeatureRepository</h3>
 <div class="member-signature"><span class="modifiers">public</span>&nbsp;<span class="element-name">NativeJavaGbFeatureRepository</span><wbr><span class="parameters">(@Nullable
  <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/String.html" title="class or interface in java.lang" class="external-link">String</a>&nbsp;apiHost,
@@ -311,7 +312,9 @@ implements <a href="IGBFeaturesRepository.html" title="interface in growthbook.s
  @Nullable
  <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Boolean.html" title="class or interface in java.lang" class="external-link">Boolean</a>&nbsp;isCacheDisabled,
  @Nullable
- <a href="../model/RequestBodyForRemoteEval.html" title="class in growthbook.sdk.java.model">RequestBodyForRemoteEval</a>&nbsp;requestBodyForRemoteEval)</span></div>
+ <a href="../model/RequestBodyForRemoteEval.html" title="class in growthbook.sdk.java.model">RequestBodyForRemoteEval</a>&nbsp;requestBodyForRemoteEval,
+ @Nullable
+ <a href="../sandbox/GbCacheManager.html" title="interface in growthbook.sdk.java.sandbox">GbCacheManager</a>&nbsp;cacheManager)</span></div>
 <div class="block">Create a new GBFeaturesRepository</div>
 <dl class="notes">
 <dt>Parameters:</dt>
