deploy: be128397ffa9e945f87ffdd298ac269a48116d9d

--- a/growthbook/sdk/java/sandbox/GbCacheManager.html
+++ b/growthbook/sdk/java/sandbox/GbCacheManager.html
@@ -74,7 +74,7 @@ loadScripts(document, 'script');</script>
 <section class="class-description" id="class-description">
 <dl class="notes">
 <dt>All Known Implementing Classes:</dt>
-<dd><code><a href="FileCachingManagerImpl.html" title="class in growthbook.sdk.java.sandbox">FileCachingManagerImpl</a></code></dd>
+<dd><code><a href="FileCachingManagerImpl.html" title="class in growthbook.sdk.java.sandbox">FileCachingManagerImpl</a></code>, <code><a href="InMemoryCachingManagerImpl.html" title="class in growthbook.sdk.java.sandbox">InMemoryCachingManagerImpl</a></code></dd>
 </dl>
 <hr>
 <div class="type-signature"><span class="modifiers">public interface </span><span class="element-name type-name-label">GbCacheManager</span></div>
