--- a/growthbook/sdk/java/sandbox/package-tree.html
+++ b/growthbook/sdk/java/sandbox/package-tree.html
@@ -59,7 +59,9 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
+<li class="circle">growthbook.sdk.java.sandbox.<a href="CacheManagerFactory.html" class="type-name-link" title="class in growthbook.sdk.java.sandbox">CacheManagerFactory</a></li>
 <li class="circle">growthbook.sdk.java.sandbox.<a href="FileCachingManagerImpl.html" class="type-name-link" title="class in growthbook.sdk.java.sandbox">FileCachingManagerImpl</a> (implements growthbook.sdk.java.sandbox.<a href="GbCacheManager.html" title="interface in growthbook.sdk.java.sandbox">GbCacheManager</a>)</li>
+<li class="circle">growthbook.sdk.java.sandbox.<a href="InMemoryCachingManagerImpl.html" class="type-name-link" title="class in growthbook.sdk.java.sandbox">InMemoryCachingManagerImpl</a> (implements growthbook.sdk.java.sandbox.<a href="GbCacheManager.html" title="interface in growthbook.sdk.java.sandbox">GbCacheManager</a>)</li>
 </ul>
 </li>
 </ul>
@@ -68,6 +70,20 @@ loadScripts(document, 'script');</script>
 <h2 title="Interface Hierarchy">Interface Hierarchy</h2>
 <ul>
 <li class="circle">growthbook.sdk.java.sandbox.<a href="GbCacheManager.html" class="type-name-link" title="interface in growthbook.sdk.java.sandbox">GbCacheManager</a></li>
+</ul>
+</section>
+<section class="hierarchy">
+<h2 title="Enum Class Hierarchy">Enum Class Hierarchy</h2>
+<ul>
+<li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
+<ul>
+<li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Enum.html" class="type-name-link external-link" title="class or interface in java.lang">Enum</a>&lt;E&gt; (implements java.lang.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Comparable.html" title="class or interface in java.lang" class="external-link">Comparable</a>&lt;T&gt;, java.lang.constant.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/constant/Constable.html" title="class or interface in java.lang.constant" class="external-link">Constable</a>, java.io.<a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a>)
+<ul>
+<li class="circle">growthbook.sdk.java.sandbox.<a href="CacheMode.html" class="type-name-link" title="enum class in growthbook.sdk.java.sandbox">CacheMode</a></li>
+</ul>
+</li>
+</ul>
+</li>
 </ul>
 </section>
 </main>
