--- a/index-all.html
+++ b/index-all.html
@@ -475,7 +475,7 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/ExperimentTracker.html" class="type-name-link" title="class in growthbook.sdk.java.multiusermode">ExperimentTracker</a> - Class in <a href="growthbook/sdk/java/multiusermode/package-summary.html">growthbook.sdk.java.multiusermode</a></dt>
 <dd>
-<div class="block">An LRU Cache implementation to keep track of the most recent experiments.</div>
+<div class="block">A thread-safe LRU Cache implementation to keep track of the most recent experiments.</div>
 </dd>
 <dt><a href="growthbook/sdk/java/multiusermode/ExperimentTracker.html#%3Cinit%3E()" class="member-name-link">ExperimentTracker()</a> - Constructor for class growthbook.sdk.java.multiusermode.<a href="growthbook/sdk/java/multiusermode/ExperimentTracker.html" title="class in growthbook.sdk.java.multiusermode">ExperimentTracker</a></dt>
 <dd>&nbsp;</dd>
