deploy: 987cb33c9a3a866ae7b260cfb6623b52829d208d

--- a/index-all.html
+++ b/index-all.html
@@ -176,6 +176,8 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/multiusermode/configurations/Options.html#builder()" class="member-name-link">builder()</a> - Static method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/Options.html" title="class in growthbook.sdk.java.multiusermode.configurations">Options</a></dt>
 <dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html#builder()" class="member-name-link">builder()</a> - Static method in class growthbook.sdk.java.multiusermode.configurations.<a href="growthbook/sdk/java/multiusermode/configurations/UserContext.html" title="class in growthbook.sdk.java.multiusermode.configurations">UserContext</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/repository/GBFeaturesRepository.html#builder()" class="member-name-link">builder()</a> - Static method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/GBFeaturesRepository.html" title="class in growthbook.sdk.java.repository">GBFeaturesRepository</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/repository/NativeJavaGbFeatureRepository.html#builder()" class="member-name-link">builder()</a> - Static method in class growthbook.sdk.java.repository.<a href="growthbook/sdk/java/repository/NativeJavaGbFeatureRepository.html" title="class in growthbook.sdk.java.repository">NativeJavaGbFeatureRepository</a></dt>
